--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -13,9 +13,9 @@ jobs:
       PIP_DISABLE_PIP_VERSION_CHECK: 1
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.10", "3.12", "3.14", "3.14t"]
         include:
-          - python-version: "3.12"
+          - python-version: "3.11"
             mariadb: 1
     steps:
       - if: ${{ matrix.mariadb }}
@@ -52,7 +52,7 @@ jobs:
       - name: Install test dependencies
         run: |
           pip install -r requirements.txt
-      
+
       - name: Run tests
         env:
           TESTDB: actions.cnf
@@ -68,7 +68,7 @@ jobs:
     env:
       PIP_NO_PYTHON_VERSION_WARNING: 1
       PIP_DISABLE_PIP_VERSION_CHECK: 1
-      DJANGO_VERSION: "4.2.16"
+      DJANGO_VERSION: "4.2.28"
     steps:
       - name: Start MySQL
         run: |
