--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,16 +2,15 @@
 name = "mysqlclient"
 description = "Python interface to MySQL"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 authors = [
     {name = "Inada Naoki", email = "songofacandy@gmail.com"}
 ]
-license = {text = "GNU General Public License v2 or later (GPLv2+)"}
+license = "GPL-2.0-or-later"
 keywords = ["MySQL"]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Environment :: Other Environment",
-    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
     "Operating System :: MacOS :: MacOS X",
     "Operating System :: Microsoft :: Windows :: Windows NT/2000",
     "Operating System :: OS Independent",
@@ -21,12 +20,11 @@ classifiers = [
     "Programming Language :: C",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
     "Topic :: Database",
     "Topic :: Database :: Database Engines/Servers",
 ]
